--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Metronic React App",
-  "name": "Metronic React App demo1",
+  "short_name": "React App",
+  "name": "React App demo",
   "start_url": "."
 }
